study/output-fixed/ep_output/Closure-133
/Users/stylethinking/Documents/StaticBugCheckers/defects4j/projects/f/Closure-133/src/com/google/javascript/jscomp/parsing/JsDocInfoParser.java:906: error: [MissingCasesInEnumSwitch] Non-exhaustive switch; either add a default or handle the remaining cases: NG_INJECT, AUTHOR, CONSISTENTIDGENERATOR, and 40 others
                    switch (annotation) {
                    ^
    (see http://errorprone.info/bugpattern/MissingCasesInEnumSwitch)
1 error
